--- a/src/index.less
+++ b/src/index.less
@@ -23,9 +23,14 @@ body {
   .ant-spin-container {
     overflow: visible !important;
   }
-
   .global-spin {
     width: 100%;
     margin: 40px 0 !important;
   }
+}
+
+:global(.ant-pagination) {
+  position: relative;
+  transform: translateX(-25%);
+  right: 50%;
 }
